# realmanSim2RealSDK

./: Makefile  README.md
docs/: api.md  architecture.md  base_transform.md  development.md  reference.md  usage.md
src/: __init__.py  config.py  joint_controller.py  package.xml  setup.cfg  setup.py
src/config/: triarm_config.yaml
src/launch/: triarm_control.launch.py
src/resource/: triarm_control
src/rm_ros_interfaces/: CMakeLists.txt  README.md  package.xml
src/rm_ros_interfaces/action/: GripperAction.action  MoveToCartesian.action  MoveToJoint.action
src/rm_ros_interfaces/msg/: ArmState.msg  GripperCommand.msg  MotionResult.msg  TriarmJointCommand.msg  VelocityMode.msg
src/rm_ros_interfaces/srv/: GetFK.srv  GetIK.srv  MoveJ.srv  MoveL.srv  SetGripper.srv  SetVelocityMode.srv
src/triarm_control/: README.md  joint_control_gui.py  joint_names.py  package.xml  setup.py
src/triarm_control/config/: triarm_config.yaml
src/triarm_control/launch/: triarm_control.launch.py
src/triarm_control/triarm_control/: __init__.py  arm_controller.py  controller_node.py  griger.py  gripper_bridge.py  gui_node.py  joint_control_gui.py  joint_names.py  realman_sdk_wrapper.py  rm65_robot.py  tf_publisher_node.py  unified_arm_node.py
